--- a/WIPRO_ASSESSMENTS-main/ReactiveProgramming/src/main/resources/application.properties
+++ b/WIPRO_ASSESSMENTS-main/ReactiveProgramming/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Note: sessionVariables sets MySQL session time_zone to a valid IANA value, avoiding the "India Standard Time" error.
 spring.r2dbc.url=r2dbc:mysql://localhost:3306/wiprotraining?allowPublicKeyRetrieval=true&sslMode=DISABLED&sessionVariables=time_zone=%27Asia/Kolkata%27
 spring.r2dbc.username=root
-spring.r2dbc.password=root
+spring.r2dbc.password=12345
 
 # Initialize schema.sql and data.sql
 spring.sql.init.mode=always
