--- a/WIPRO_ASSESSMENTS-main/SpringBootMVCThymeleaf/src/main/resources/application.properties
+++ b/WIPRO_ASSESSMENTS-main/SpringBootMVCThymeleaf/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.application.name=SpringBootMVCThymeleaf
 # MySQL database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/wiprotraining?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA settings (optional, but commonly used with MySQL)
