--- a/WIPRO_ASSESSMENTS-main/SpringSecurityFormJdbc/src/main/resources/application.properties
+++ b/WIPRO_ASSESSMENTS-main/SpringSecurityFormJdbc/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=SpringSecurityFormJdbc
 # MySQL database connection settings
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_security?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA settings (optional, but commonly used with MySQL)
