--- a/WIPRO_ASSESSMENTS-main/ValidationExample/src/main/resources/application.properties
+++ b/WIPRO_ASSESSMENTS-main/ValidationExample/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=ValidationExample
 # MySQL Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/wiprotraining?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
